# csv-blueprint

./: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: linter.yml  release.yml  test.yml
docs/: full.yaml  sample-file-bad.csv  sample-file-good.csv  sample-schema.yaml
examples/: sample1.yaml
src/csv_blueprint/: __about__.py  __init__.py
src/csv_blueprint/cli/: __init__.py
src/csv_blueprint/config/: __init__.py
src/csv_blueprint/core/: __init__.py  validator.py
src/csv_blueprint/rules/: __init__.py  aggregates.py  bool.py  dates.py  enum.py  numeric.py  string.py
tests/: __init__.py
tests/rules/: __init__.py  bool_rules_test.py  enum_rules_test.py  numeric_rules_test.py  string_rules_test.py
